# master-patient-index-rust-crate

./: .dockerignore  .env.example  .env.production.example  .gitignore  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.test  README.md  ai-progress.md  diesel.toml  docker-compose.test.yml  docker-compose.yml  plan.md  task-1.md  task-10.md  task-11.md  task-12.md  task-2.md  task-3.md  task-4.md  task-5.md  task-6.md  task-7.md  task-8.md  task-9.md  todo.md
.claude/: settings.local.json
docs/: database-schema.md
migrations/2024122800000001_create_organizations/: down.sql  up.sql
migrations/2024122800000002_create_patients/: down.sql  up.sql
migrations/2024122800000003_create_patient_related_tables/: down.sql  up.sql
migrations/2024122800000004_create_audit_tables/: down.sql  up.sql
migrations/2024122800000005_add_indexes_and_triggers/: down.sql  up.sql
src/: error.rs  lib.rs
src/api/: mod.rs
src/api/fhir/: bundle.rs  handlers.rs  mod.rs  resources.rs  search_parameters.rs
src/api/grpc/: mod.rs
src/api/rest/: handlers.rs  handlers.rs.bak  mod.rs  routes.rs  state.rs
src/config/: mod.rs
src/db/: audit.rs  mod.rs  models.rs  repositories.rs  schema.rs
src/matching/: algorithms.rs  mod.rs  scoring.rs
src/models/: identifier.rs  mod.rs  organization.rs  patient.rs
src/observability/: metrics.rs  mod.rs  traces.rs
src/search/: index.rs  mod.rs  query.rs
src/streaming/: consumer.rs  mod.rs  producer.rs
tests/: api_integration_test.rs
tests/common/: mod.rs
