[package]
name = "master_patient_index"
version = "0.1.0"
edition = "2021"
authors = ["MPI Development Team"]
description = "Master Patient Index (MPI) - A healthcare patient identification and matching system"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sixarm/master-patient-index-rust-crate"
keywords = ["healthcare", "mpi", "patient-matching", "fhir", "hl7"]
categories = ["healthcare", "database"]

[dependencies]
# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# Web Framework & HTTP
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
hyper = { version = "1.5", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (PostgreSQL ORM)
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid", "serde_json", "network-address", "numeric"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Search Engine
tantivy = "0.22"

# gRPC
tonic = { version = "0.12", features = ["transport", "codegen", "prost"] }
prost = "0.13"

# OpenAPI Documentation
utoipa = { version = "5.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
openapiv3 = "2.0"

# Data Streaming
fluvio = "0.23"

# OpenTelemetry (Observability)
opentelemetry = { version = "0.27", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
validator = { version = "0.19", features = ["derive"] }
dotenvy = "0.15"

# Fuzzy Matching & String Processing
strsim = "0.11"
fuzzy-matcher = "0.3"

# Security
argon2 = "0.5"
jsonwebtoken = "9.3"

[dev-dependencies]
# Testing
assertables = "9.5"
tokio-test = "0.4"
mockall = "0.13"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[build-dependencies]
# gRPC code generation
tonic-build = "0.12"

# Benchmarks will be added later
# [[bench]]
# name = "patient_matching"
# harness = false
#
# [[bench]]
# name = "search_performance"
# harness = false
#
# [[bench]]
# name = "database_queries"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
